--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -12,14 +12,17 @@ White: hsl(0, 0%, 100%)
 @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap");
 
 :root {
-    // Primary
-    --very-dark-magenta: hsl(300, 43%, 22%);
-    --soft-pink: hsl(333, 80%, 67%);
-    // Neutral
-    --dark-grayish-magenta: hsl(303, 10%, 53%);
-    --light-grayish-magenta: hsl(300, 24%, 96%);
-    --white: hsl(0, 0%, 100%);
-    --font-size: 15px;
+  // Primary
+  --very-dark-magenta: hsl(300, 43%, 22%);
+  --soft-pink: hsl(333, 80%, 67%);
+  // Neutral
+  --dark-grayish-magenta: hsl(303, 10%, 53%);
+  --light-grayish-magenta: hsl(300, 24%, 96%);
+  --white: hsl(0, 0%, 100%);
+  --font-size: 15px;
+  --font-size-xl: 46px;
+  --line-height-xl: var(--font-size-xl);
+  --border-radius: 0.5rem;
 }
 
 /*
@@ -28,14 +31,14 @@ White: hsl(0, 0%, 100%)
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /*
     2. Remove default margin
   */
 * {
-    margin: 0;
+  margin: 0;
 }
 
 /*
@@ -43,7 +46,7 @@ White: hsl(0, 0%, 100%)
   */
 html,
 body {
-    height: 100%;
+  height: 100%;
 }
 
 /*
@@ -52,10 +55,10 @@ body {
     5. Improve text rendering
   */
 body {
-    line-height: 1.5;
-    -webkit-font-smoothing: antialiased;
-    font-size: var(--font-size);
-    font-family: "League Spartan", sans-serif;
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  font-size: var(--font-size);
+  font-family: "League Spartan", sans-serif;
 }
 
 /*
@@ -66,8 +69,8 @@ picture,
 video,
 canvas,
 svg {
-    display: block;
-    max-width: 100%;
+  display: block;
+  max-width: 100%;
 }
 
 /*
@@ -77,7 +80,7 @@ input,
 button,
 textarea,
 select {
-    font: inherit;
+  font: inherit;
 }
 
 /*
@@ -90,7 +93,7 @@ h3,
 h4,
 h5,
 h6 {
-    overflow-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 /*
@@ -98,19 +101,69 @@ h6 {
   */
 #root,
 #__next {
-    isolation: isolate;
+  isolation: isolate;
 }
 
 .Main {
-    display: grid;
-    grid-template-rows: 1fr auto;
-    padding: 1rem;
-    min-height: 100vh;
-    width: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  padding: 1.25rem;
+  min-height: 100vh;
+  width: 100%;
 }
 
 .SocialProofSection {
-    width: 100%;
-    max-width: 1440px;
-    justify-self: center;
+  width: 100%;
+  max-width: 1440px;
+  justify-self: center;
+
+  &-ratingItem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.75rem;
+    background-color: var(--light-grayish-magenta);
+    padding: 1rem;
+    border-radius: var(--border-radius);
+  }
+
+  &-ratingList {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    gap: 1rem;
+  }
+
+  &-overview {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    h1 {
+      text-align: center;
+      color: var(--very-dark-magenta);
+      font-size: var(--font-size-xl);
+      line-height: 2.5rem;
+      font-weight: 700;
+      letter-spacing: -2px;
+    }
+
+    p {
+      text-align: center;
+      color: var(--dark-grayish-magenta);
+    }
+  }
+
+  .Rating {
+    &-channel {
+      font-weight: 700;
+      color: var(--very-dark-magenta);
+    }
+
+    &-starContainer {
+      display: flex;
+      gap: 1rem;
+      align-items: center;
+    }
+  }
 }
