--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -111,6 +111,11 @@ h6 {
   padding: 3rem 1.25rem;
   min-height: 100vh;
   width: 100%;
+  background-image: url("/bg-pattern-top-mobile.svg"),
+      url("/bg-pattern-bottom-mobile.svg");
+  background-repeat: no-repeat;
+  background-position: top 0% left 100%, bottom 0rem right 100%;
+  background-size: 40vw 40vw;
 }
 
 .SocialProofSection {
@@ -224,14 +229,51 @@ h6 {
 }
 
 @media screen and (min-width: 997px) {
+  .Main {
+    // add background image bg-patter-bottom-desktop.svg and bg-pattern-top-desktop.svg
+    background-image: url("../../public/bg-pattern-top-desktop.svg"),
+      url("../../public/bg-pattern-bottom-desktop.svg");
+    background-repeat: no-repeat;
+    background-position: top 0rem right 100%, bottom 0rem left 100%;
+    background-size: 40vw, 40vw;
+  }
+  
   .SocialProofSection {
-    // max-width: 100%;
     max-width: 75rem;
-    padding: 2rem 4rem;
+    padding: 0rem 4rem;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 4rem;
+
+    &-cardList {
+      gap: 1.75rem;
+      grid-template-columns: 1fr 1fr 1fr;
+      // align-items: flex-start;
+      // display: flex;
+    }
+
+    &-cardItem {
+      height: 100%;
+    }
+
+    &-cardItem:nth-child(2),
+    &-cardItem:nth-child(3) {
+      position: relative;
+    }
+
+    &-cardItem:nth-child(2) {
+      top: 0.9rem;
+    }
+    &-cardItem:nth-child(3) {
+      top: 1.8rem;
+    }
 
     &-header {
       grid-template-columns: 1fr 1fr;
       gap: 12%;
+      align-items: center;
     }
 
     &-overview {
