--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -116,6 +116,28 @@ h6 {
   background-repeat: no-repeat;
   background-position: top 0% left 100%, bottom 0rem right 100%;
   background-size: 40vw 40vw;
+  gap: 4rem;
+
+  .attribution {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.25rem;
+    color: var(--very-dark-magenta);
+    font-size: 0.75rem;
+    line-height: 1rem;
+    text-align: center;
+
+    a {
+      color: var(--soft-pink);
+      transition: all 0.3s ease-in-out;
+      text-decoration-color: transparent;
+    }
+
+    a:hover {
+      text-decoration-color: var(--soft-pink);
+    }
+  }
 }
 
 .SocialProofSection {
@@ -231,8 +253,8 @@ h6 {
 @media screen and (min-width: 997px) {
   .Main {
     // add background image bg-patter-bottom-desktop.svg and bg-pattern-top-desktop.svg
-    background-image: url("../../public/bg-pattern-top-desktop.svg"),
-      url("../../public/bg-pattern-bottom-desktop.svg");
+    background-image: url("/bg-pattern-top-desktop.svg"),
+      url("/bg-pattern-bottom-desktop.svg");
     background-repeat: no-repeat;
     background-position: top 0rem right 100%, bottom 0rem left 100%;
     background-size: 40vw, 40vw;
@@ -250,8 +272,6 @@ h6 {
     &-cardList {
       gap: 1.75rem;
       grid-template-columns: 1fr 1fr 1fr;
-      // align-items: flex-start;
-      // display: flex;
     }
 
     &-cardItem {
